api/swim_form/src/tests/derive/form/union.stderr
error: Union types are not supported.
  --> $DIR/src/tests/derive/form/union.rs:18:14
   |
18 |     #[derive(Form)]
   |              ^^^^
